--- a/app/views/psd-cases-area/my-cases-sorting.html
+++ b/app/views/psd-cases-area/my-cases-sorting.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-02.html" %}
 
 {% block pageTitle %}
-    Team cases
+    My cases
 {% endblock %}
 
 
@@ -11,11 +11,11 @@
     <div class="govuk-grid-column-two-thirds"> 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-            Team cases 
+            My cases 
         </h1>
 
         <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-1">
-            The Renfrewshire Council team are the case owners of 86 open cases.
+            You are the case owner of 23 open cases.
         </p>
 
     </div>
@@ -38,19 +38,17 @@
 
         <nav aria-label="Secondary">
             <ul class="govuk-list opss-left-nav">
-                <li>
-                    <a href="/psd-cases-area/my-cases-sorting.html" class="govuk-link govuk-link--no-visited-state">My cases</a>
-                </li>
                 <li class="opss-left-nav__active">
-                    <a href="/psd-cases-area/team-cases.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Team cases</a>
+                    <a href="/psd-cases-area/my-cases-sorting.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">My cases</a>
+                </li>
+                <li>
+                    <a href="/psd-cases-area/team-cases.html" class="govuk-link govuk-link--no-visited-state">Team cases</a>
                 </li>
                 <li>
                     <a href="/psd-cases-area/all-cases.html" class="govuk-link govuk-link--no-visited-state">All cases &ndash; Search</a>
                 </li>
             </ul>
         </nav>
-
-      
 
     </section>
 
@@ -102,11 +100,10 @@
 
                     </div>
             </div>
-        </div>    
+        </div>        
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full" role="region" aria-label="Cases">
-
 
                 <table class="govuk-table opss-table-items opss-table-items--sm">
                     <caption class="govuk-visually-hidden">
