--- a/app/views/psd-cases-area/all-cases.html
+++ b/app/views/psd-cases-area/all-cases.html
@@ -68,7 +68,7 @@
             <nav aria-label="Secondary">
                 <ul class="govuk-list opss-left-nav">
                     <li>
-                        <a href="/psd-cases-area/my-cases.html" class="govuk-link govuk-link--no-visited-state">My cases</a>
+                        <a href="/psd-cases-area/my-cases-sorting.html" class="govuk-link govuk-link--no-visited-state">My cases</a>
                     </li>
                     <li>
                         <a href="/psd-cases-area/team-cases.html" class="govuk-link govuk-link--no-visited-state">Team cases</a>
@@ -524,6 +524,7 @@
                                     <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=recent" selected="selected">Recent updates</option>
                                     <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=oldest">Oldest updates</option>
                                     <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=newest">Newest cases</option>
+                                    <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=oldestcases">Oldest cases</option>
                                 </select>
                             </fieldset>
 
