one item added to spec list

--- a/app/views/psd-cases-area/index.html
+++ b/app/views/psd-cases-area/index.html
@@ -61,6 +61,7 @@
                 <li>The page automatically loads displaying all the <b>open</b> cases owned by the user</li>
                 <li>The list of <b>open</b> cases are automatically ordered by most recently created</li>
                 <li>If there are 12 or more cases. The 'Sort by' option is added to the page. <br>(There is a new sorting option of Oldest cases)</li>
+                <li>If there are no (zero) cases, the sorting options are omitted.</li>
                 <li>The center table column now displays the case created date</li>
                 <li>As before: Pagination for 20 or more cases. Table footer included for 12 or more cases. (New <abbr>ID</abbr> added to content area and removed from parent table tag on this page).</li>
             </ul>
@@ -85,6 +86,7 @@
                 <li>The page automatically loads displaying all the <b>open</b> cases owned by the team</li>
                 <li>The list of <b>open</b> cases are automatically ordered by most recently created</li>
                 <li>If there are 12 or more cases. The 'Sort by' option is added to the page. <br>(There is a new sorting option of Oldest cases)</li>
+                <li>If there are no (zero) cases, the sorting options are omitted.</li>
                 <li>The center table column now displays the case created date</li>
                 <li>As before: Pagination for 20 or more cases. Table footer included for 12 or more cases. (New <abbr>ID</abbr> added to content area and removed from parent table tag on this page).</li>
             </ul>
