change txt to your cases

--- a/app/views/psd-cases-area/all-cases.html
+++ b/app/views/psd-cases-area/all-cases.html
@@ -68,7 +68,7 @@
             <nav aria-label="Secondary">
                 <ul class="govuk-list opss-left-nav">
                     <li>
-                        <a href="/psd-cases-area/my-cases-sorting.html" class="govuk-link govuk-link--no-visited-state">My cases</a>
+                        <a href="/psd-cases-area/your-cases-sorting.html" class="govuk-link govuk-link--no-visited-state">Your cases</a>
                     </li>
                     <li>
                         <a href="/psd-cases-area/team-cases.html" class="govuk-link govuk-link--no-visited-state">Team cases</a>
