--- a/app/views/psd-cases-area/index.html
+++ b/app/views/psd-cases-area/index.html
@@ -34,11 +34,11 @@
                     </h1>
 
                     <p class="govuk-body-l">
-                        Pages: My cases, Team cases and All cases - Search: <br>
+                        Pages: Your cases, Team cases and All cases - Search: <br>
                     </p>
 
                     <p class="govuk-body">
-                        3x page designs showing two new pages with all 3 incorporating an <b>additional left-hand sub-nav</b>. When the user selects the "Cases" option from the top level navigation, the user now lands on the "My cases" page. (The parent nav "Cases" active state remains active for all 3 pages). 
+                        3x page designs showing two new pages with all 3 incorporating an <b>additional left-hand sub-nav</b>. When the user selects the "Cases" option from the top level navigation, the user now lands on the "Your cases" page. (The parent nav "Cases" active state remains active for all 3 pages). 
                         The user will still be able to 'Create a case' from any of the pages.
                     </p>
 
@@ -54,7 +54,7 @@
     <div class="govuk-grid-column-full govuk-!-padding-top-7">
         <div class="govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8 opss-border-all">
             <h2 class="govuk-heading-s">
-                1. My cases:
+                1. Your cases:
             </h2>
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
@@ -68,18 +68,18 @@
 
             <ol class="govuk-list govuk-list--number govuk-!-margin-bottom-9">
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/my-cases.html" target="_blank">My cases</a> page (without sorting)
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/your-cases.html" target="_blank">Your cases</a> page (without sorting)
                 </li>
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/my-cases-sorting.html" target="_blank">My cases</a> page (with sorting)
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/your-cases-sorting.html" target="_blank">Your cases</a> page (with sorting)
                 </li>                
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/no-cases-example.html" target="_blank">My cases</a> page (with no cases)
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/no-cases-example.html" target="_blank">Your cases</a> page (with no cases)
                 </li>
             </ol> 
 
             <h2 class="govuk-heading-s">
-                2. Team cases: (functionality as 'My cases')
+                2. Team cases: (functionality as 'Your cases')
             </h2>
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
@@ -93,7 +93,7 @@
 
             <ol class="govuk-list govuk-list--number govuk-!-margin-bottom-9">
                 <li>
-                    Team cases page (without sorting): see 'My cases' example
+                    Team cases page (without sorting): see 'Your cases' example
                 </li>                
                 <li>
                     <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/team-cases.html" target="_blank">Team cases</a> page (with sorting)
