--- a/app/views/psd-cases-area/no-team-cases-example.html
+++ b/app/views/psd-cases-area/no-team-cases-example.html
@@ -39,7 +39,7 @@
         <nav aria-label="Secondary">
             <ul class="govuk-list opss-left-nav">
                 <li>
-                    <a href="/psd-cases-area/my-cases-sorting.html" class="govuk-link govuk-link--no-visited-state">My cases</a>
+                    <a href="/psd-cases-area/your-cases-sorting.html" class="govuk-link govuk-link--no-visited-state">Your cases</a>
                 </li>
                 <li class="opss-left-nav__active">
                     <a href="/psd-cases-area/team-cases.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Team cases</a>
