--- a/app/views/psd-cases-area/team-cases.html
+++ b/app/views/psd-cases-area/team-cases.html
@@ -39,7 +39,7 @@
         <nav aria-label="Secondary">
             <ul class="govuk-list opss-left-nav">
                 <li>
-                    <a href="/psd-cases-area/my-cases-sorting.html" class="govuk-link govuk-link--no-visited-state">My cases</a>
+                    <a href="/psd-cases-area/your-cases-sorting.html" class="govuk-link govuk-link--no-visited-state">Your cases</a>
                 </li>
                 <li class="opss-left-nav__active">
                     <a href="/psd-cases-area/team-cases.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Team cases</a>
@@ -60,7 +60,8 @@
 
             <div class="govuk-grid-column-one-third opss-float-right-desktop">
                 <div class="govuk-form-group opss-text-align-right">
-
+                    
+                    <form action="" novalidate>
                         <fieldset class="opss-border-none govuk-!-padding-0 opss-nojs-hide">
                             <label class="govuk-label govuk-body-s" for="results-sort">
                                 Sort <span class="govuk-visually-hidden">the results</span> by
@@ -99,9 +100,11 @@
                                 </a>
                             </dd>
                         </dl>
+                    </form>
 
-                    </div>
+                </div>
             </div>
+            
         </div>    
 
         <div class="govuk-grid-row">
