--- a/app/views/psd-cases-area/your-cases-sorting.html
+++ b/app/views/psd-cases-area/your-cases-sorting.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-02.html" %}
 
 {% block pageTitle %}
-    My cases
+    Your cases
 {% endblock %}
 
 
@@ -11,7 +11,7 @@
     <div class="govuk-grid-column-two-thirds"> 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-            My cases 
+            Your cases 
         </h1>
 
         <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-1">
@@ -39,7 +39,7 @@
         <nav aria-label="Secondary">
             <ul class="govuk-list opss-left-nav">
                 <li class="opss-left-nav__active">
-                    <a href="/psd-cases-area/my-cases-sorting.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">My cases</a>
+                    <a href="/psd-cases-area/your-cases-sorting.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Your cases</a>
                 </li>
                 <li>
                     <a href="/psd-cases-area/team-cases.html" class="govuk-link govuk-link--no-visited-state">Team cases</a>
@@ -58,7 +58,8 @@
 
             <div class="govuk-grid-column-one-third opss-float-right-desktop">
                 <div class="govuk-form-group opss-text-align-right">
-
+                    
+                    <form action="" novalidate>
                         <fieldset class="opss-border-none govuk-!-padding-0 opss-nojs-hide">
                             <label class="govuk-label govuk-body-s" for="results-sort">
                                 Sort <span class="govuk-visually-hidden">the results</span> by
@@ -97,9 +98,11 @@
                                 </a>
                             </dd>
                         </dl>
+                    </form>
 
-                    </div>
+                </div>
             </div>
+            
         </div>        
 
         <div class="govuk-grid-row">
