--- a/app/views/psd-cases-area/all-cases.html
+++ b/app/views/psd-cases-area/all-cases.html
@@ -32,7 +32,7 @@
                 </p-->
 
                 <p class="govuk-body-s govuk-!-margin-bottom-4">
-                    <span id="search-hint">You can search for a case using a case number or the keywords that describe it and by filtering the results.</span> You can also filter all case records without a keyword search.
+                    <span id="search-hint">You can search for a case using a case number or the keywords that describe it and by filtering the results.</span> You can also filter all case records without a case number or keyword search.
                 </p>
 
                 <p class="govuk-body-s govuk-!-margin-bottom-1">
@@ -497,13 +497,13 @@
                     <div class="govuk-form-group govuk-!-padding-bottom-2"> 
 
                         <label class="govuk-label" for="cases-search">
-                            Keywords search
+                            Search
                         </label>
         
                         <div class="govuk-input__wrapper opss-search__wrapper">
                             <input class="govuk-input govuk-!-width-full" type="search" id="cases-search" name="cases-search" spellcheck="false" aria-describedby="search-hint">
                             <button class="govuk-button govuk-!-margin-bottom-0" data-module="govuk-button">
-                                <span class="govuk-visually-hidden">Search</span>
+                                <span class="govuk-visually-hidden">Submit search</span>
                             </button>
                         </div>
         
