--- a/app/views/psd-cases-area/index.html
+++ b/app/views/psd-cases-area/index.html
@@ -34,14 +34,13 @@
                     </h1>
 
                     <p class="govuk-body-l">
-                        Pages: Your cases, Team cases and All cases - Search: <br>
+                        Pages: Your cases, Team cases and All cases - Search: 3x page designs showing two new pages with all 3 incorporating an <b>additional left-hand sub-nav</b>. 
                     </p>
 
-                    <p class="govuk-body">
-                        3x page designs showing two new pages with all 3 incorporating an <b>additional left-hand sub-nav</b>. When the user selects the "Cases" option from the top level navigation, the user now lands on the "Your cases" page. (The parent nav "Cases" active state remains active for all 3 pages). 
-                        The user will still be able to 'Create a case' from any of the pages.
-                    </p>
-
+                    <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-8">
+                        <li>When the user selects the "Cases" option from the top level navigation, the user now lands on the "Your cases" page. The parent nav "Cases" active state remains active for all 3 pages.</li>
+                        <li>When the user selects the "Your cases" link from the Home page, the user now lands on the new "Your cases" page.</li>
+                    </ul>
                      
 
 
@@ -110,6 +109,7 @@
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>No change to the current functionality</li>
                 <li>Add 'Oldest cases' to the sorting options to match the two new pages</li>
+                <li>If a user clicks away</li>
                 <li>There is new content for the drop-down help text. The second paragraph (spreadsheet advice) is contextual, as like the download link elsewhere in the page</li>
                 <li>Design changes: 
                     <ul class="govuk-list govuk-list--bullet">
@@ -118,6 +118,7 @@
                         <li>Keywords input field moved to new row, margin/padding and input width classes changed</li>
                         <li>Additional <abbr>ID</abbr> "page-content" added to main section (for skip nav)</li>
                         <li>Changes to the classes/styling on the 'Filters' header and the legends for the filter groups</li>
+                        <li>Changed the search input label to just "Search" and changed the hidden text on the search button to "Submit search".</li>
                     </ul>
                 </li>
             </ul>            
