--- a/app/views/psd-cases-area/team-cases.html
+++ b/app/views/psd-cases-area/team-cases.html
@@ -15,7 +15,7 @@
         </h1>
 
         <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-1">
-            The Renfrewshire Council team are the case owners of 86 open cases.
+            The [Renfrewshire Council] team are the case owners of 86 open cases.
         </p>
 
     </div>
