--- a/app/views/responsible-person-address/responsible-person-address_alt.html
+++ b/app/views/responsible-person-address/responsible-person-address_alt.html
@@ -46,15 +46,15 @@
 
         
 
-        <div class="govuk-warning-text govuk-!-margin-bottom-0 govuk-!-margin-top-7 opss-warning-text--s">
+        <!--div class="govuk-warning-text govuk-!-margin-bottom-0 govuk-!-margin-top-7 opss-warning-text--s">
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             
             <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
                 You must update your cosmetic product labels with your new address. Any cosmetic products you have notified will be associated with the new address. You will not need to submit a new notification. 
             </strong>
-        </div>
-        <div class="govuk-warning-text govuk-!-margin-top-0 govuk-!-margin-bottom-6 opss-warning-text--s">
+        </div-->
+        <div class="govuk-warning-text govuk-!-margin-top-4 govuk-!-margin-bottom-6">
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             
             <strong class="govuk-warning-text__text">
