index updates cases

--- a/app/views/psd-cases-area/all-cases.html
+++ b/app/views/psd-cases-area/all-cases.html
@@ -16,7 +16,7 @@
             All cases &ndash; Search
         </h1>
 
-        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-1">
+        <p class="govuk-body opss-secondary-text">
             Search all cases in the Product Safety Database (<abbr>PSD</abbr>).
         </p>
 
@@ -56,7 +56,7 @@
 
 <form id="cases-search-form" action="/cases/search" role="search" accept-charset="UTF-8" novalidate>
 
-    <div class="govuk-grid-row opss-full-height govuk-!-padding-top-9">
+    <div class="govuk-grid-row opss-full-height govuk-!-padding-top-7">
 
         <!--XXXXXXXXXX filters section starts XXXXXXXXXXX -->
         <section class="govuk-grid-column-one-quarter govuk-!-padding-right-1 opss-full-height__col">
