--- a/app/views/psd-cases-area/index.html
+++ b/app/views/psd-cases-area/index.html
@@ -40,6 +40,7 @@
                     <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-8">
                         <li>When the user selects the "Cases" option from the top level navigation, the user now lands on the "Your cases" page. The parent nav "Cases" active state remains active for all 3 pages.</li>
                         <li>When the user selects the "Your cases" link from the Home page, the user now lands on the new "Your cases" page.</li>
+                        <li>When the user selects the "All cases" link from the Home page, the user lands on the "All cases" page.</li>
                     </ul>
                      
 
