--- a/app/views/psd-cases-area/all-cases.html
+++ b/app/views/psd-cases-area/all-cases.html
@@ -32,7 +32,7 @@
                 </p-->
 
                 <p class="govuk-body-s govuk-!-margin-bottom-4">
-                    <span id="search-hint">You can search for a case using a case number or the keywords that describe it and by filtering the results.</span> You can also filter all case records without a case number or keyword search.
+                    <span id="search-hint">You can search for a case using a case number or the keywords that describe it and by filtering the results.</span> You can also filter all case records without a case number or a keyword search.
                 </p>
 
                 <p class="govuk-body-s govuk-!-margin-bottom-1">
