--- a/app/views/psd-cases-area/all-cases-1.html
+++ b/app/views/psd-cases-area/all-cases-1.html
@@ -10,7 +10,7 @@
 
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds"> 
+    <div class="govuk-grid-column-two-thirds opss-desktop-min-height--s"> 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
             All cases &ndash; Search
@@ -42,7 +42,7 @@
         </details>
     </div>
     <div class="govuk-grid-column-one-third">
-        <div class="opss-text-align-right">
+        <div class="opss-text-align-right govuk-!-margin-bottom-8">
             <a href="find-the-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Create a case
             </a>            
