--- a/app/views/psd-cases-area/your-cases.html
+++ b/app/views/psd-cases-area/your-cases.html
@@ -20,7 +20,7 @@
 
     </div>
     <div class="govuk-grid-column-one-third">
-        <div class="opss-text-align-right">
+        <div class="opss-text-align-right govuk-!-margin-bottom-8">
             <a href="find-the-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Create a case
             </a>            
