--- a/app/views/psd-cases-area/all-cases.html
+++ b/app/views/psd-cases-area/all-cases.html
@@ -10,7 +10,7 @@
 
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds"> 
+    <div class="govuk-grid-column-two-thirds opss-desktop-min-height--s"> 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
             All cases &ndash; Search
@@ -46,7 +46,7 @@
         </details>
     </div>
     <div class="govuk-grid-column-one-third">
-        <div class="opss-text-align-right">
+        <div class="opss-text-align-right govuk-!-margin-bottom-8">
             <a href="find-the-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Create a case
             </a>            
@@ -56,7 +56,7 @@
 
 <form id="cases-search-form" action="/cases/search" role="search" accept-charset="UTF-8" novalidate>
 
-    <div class="govuk-grid-row opss-full-height govuk-!-padding-top-7">
+    <div class="govuk-grid-row opss-full-height">
 
         <!--XXXXXXXXXX filters section starts XXXXXXXXXXX -->
         <section class="govuk-grid-column-one-quarter govuk-!-padding-right-1 opss-full-height__col">
