--- a/app/views/psd-cases-area/team-cases.html
+++ b/app/views/psd-cases-area/team-cases.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds"> 
+    <div class="govuk-grid-column-two-thirds opss-desktop-min-height--s"> 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
             Team cases 
@@ -20,7 +20,7 @@
 
     </div>
     <div class="govuk-grid-column-one-third">
-        <div class="opss-text-align-right">
+        <div class="opss-text-align-right govuk-!-margin-bottom-8">
             <a href="find-the-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Create a case
             </a>            
@@ -28,7 +28,7 @@
     </div>
 </div>
 
-<div class="govuk-grid-row opss-full-height govuk-!-margin-top-7 govuk-!-padding-top-9">
+<div class="govuk-grid-row opss-full-height">
 
     <section class="govuk-grid-column-one-quarter govuk-!-padding-right-1 opss-full-height__col">
 
