--- a/app/views/psd-cases-area/index.html
+++ b/app/views/psd-cases-area/index.html
@@ -111,6 +111,7 @@
                 <li>No change to the current functionality</li>
                 <li>Add 'Oldest cases' to the sorting options to match the two new pages</li>
                 <li>There is new content for the drop-down help text. The second paragraph (spreadsheet advice) is contextual, as like the download link elsewhere in the page</li>
+                <li>We agreed in refinement that the persisted filters behaviour would be removed, so that if and when a user changes the filters but then navigates away and then navigates back to the 'All cases - Search' page, the filters will have returned to their default settings. (Filter changes only persist while the user is interacting with the page).</li>
                 <li>Design changes: 
                     <ul class="govuk-list govuk-list--bullet">
                         <li>Updates to the H1 title and 'help' link text</li>
