--- a/app/views/cosmetics-general/tasks/pg-remove-nanomaterial.html
+++ b/app/views/cosmetics-general/tasks/pg-remove-nanomaterial.html
@@ -23,7 +23,7 @@
 
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <h1 class="govuk-fieldset__heading">
-                            Select which nanomaterials to remove
+                            Select which nanomaterial(s) to remove
                         </h1>
                     </legend>
 
