additional help text for cases pgs

--- a/app/views/psd-cases-area/no-team-cases-example.html
+++ b/app/views/psd-cases-area/no-team-cases-example.html
@@ -59,7 +59,7 @@
 
 
                 <p class="govuk-body opss-text-align-center">
-                   The team has no open cases.
+                   The team has no open cases. <br>You can find all other cases in the <a href="/psd-cases-area/all-cases.html" class="govuk-link govuk-link--no-visited-state">all cases</a> search page.
                 </p>
 
 
